# emergent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  deep-research-report.md  emergent-design-complete.md  emergent-spec-v3.md  emergent.service  emergent.service.example  pyproject.toml
.github/workflows/: ci.yml
src/emergent/: __init__.py  __main__.py  config.py
src/emergent/agent/: context.py  prompts.py  runtime.py
src/emergent/channels/: telegram.py  terminal.py
src/emergent/memory/: retriever.py  store.py  summarizer.py
src/emergent/observability/: banner.py  metrics.py  tracing.py
src/emergent/tools/: __init__.py  cron.py  files.py  memory_tools.py  registry.py  shell.py  system_info.py  web.py
tests/: conftest.py
tests/test_e2e/: test_agent_loop.py
tests/test_integration/: test_agent_loop.py
tests/test_memory/: test_store.py
tests/test_tools/: test_files.py  test_registry.py  test_security.py  test_shell.py
